--- a/index.html
+++ b/index.html
@@ -7,6 +7,48 @@
     <title>Document</title>
 </head>
 <body>
-    Testing website
+    <section>
+        <nav>
+            <img src="./assets/FES.svg" alt="">
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#discord">Discord</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <header>
+            <div>
+                <h1>Best place to learn frontend</h1>
+                <p>Go from being an absolute beginner to pro with a simplified process</p>
+                <button>Start now</button>
+            </div>
+            <figure>
+                <img src="./assets/laptop.png" alt="Home page image">
+            </figure>
+        </header>
+    </section>
+<main>
+    <section id="about">
+        <h2>About</h2>
+        <div>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia fugiat consectetur hic cum voluptatibus quas nam voluptate, doloribus est quos dolorem ab fuga blanditiis perspiciatis rerum quaerat excepturi odio animi?
+            </p>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore, totam?
+            </p>
+        </div>
+        <figure>
+            <img src="./assets/about.jpg" alt="">
+        </figure>
+    </section>
+    <section id="discord">
+        
+    </section>
+    <section id="contact">
+
+    </section>
+</main>
+    
 </body>
 </html>
