editing website more

--- a/index.html
+++ b/index.html
@@ -43,12 +43,34 @@
         </figure>
     </section>
     <section id="discord">
-        
+        <h2>Discord</h2>
+        <figure>
+            <img src="./assets/discord.png" alt="">
+        </figure>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, pariatur?</p>
+        </div>
     </section>
     <section id="contact">
-
+        <h2>Contact</h2>
+        <form action="">
+            <span>Email</span>
+            <input type="text" placeholder="test@example.com">
+            <span>Message</span>
+            <textarea type="text" placeholder="test@example.com"></textarea>
+        </form>
     </section>
 </main>
     
+<footer>
+    <img src="./assets/FES.svg" alt="">
+    <div>
+        <a href="#about">About</a>
+        <a href="#discord">Discord</a>
+        <a href="#contact">Contact</a>
+        <a href="#courses">Courses</a>
+    </div>
+    <p>Copyright Frontend Simplified</p>
+</footer>
 </body>
 </html>
