--- a/index.html
+++ b/index.html
@@ -33,17 +33,19 @@
 <main>
     <section id="about">
         <h2>About</h2>
-        <div>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia fugiat consectetur hic cum voluptatibus quas nam voluptate, doloribus est quos dolorem ab fuga blanditiis perspiciatis rerum quaerat excepturi odio animi?
-            </p>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore, totam?
-            </p>
+        <div class="section__description">
+            <div class="section__description--wrapper">
+                <p class="section__description--para">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia fugiat consectetur hic cum voluptatibus quas nam voluptate, doloribus est quos dolorem ab fuga blanditiis perspiciatis rerum quaerat excepturi odio animi?
+                </p>
+                <p class="section__description--para">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore, totam?
+                </p>
+            </div>
+            <figure class="about__img--wrapper">
+                <img src="./assets/about.jpg" alt="">
+            </figure>
         </div>
-        <figure>
-            <img src="./assets/about.jpg" alt="">
-        </figure>
     </section>
     <section id="discord">
         <h2>Discord</h2>
@@ -51,7 +53,7 @@
             <img src="./assets/discord.png" alt="">
         </figure>
         <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, pariatur?</p>
+            <p class="section__description--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, pariatur?</p>
         </div>
     </section>
     <section id="contact">
